# SafeHat_WorkNet

./: .env  .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini
Schematic/: Management.kicad_sch  SafeHat_WorkNet.kicad_sch  Vision.kicad_sch
components/common/: CMakeLists.txt  uart.c
components/common/include/: error_handler.h
components/controllers/include/: controller_hal.h
components/sensors/: CMakeLists.txt
components/sensors/bh1750_hal/: bh1750_hal.c
components/sensors/ccs811_hal/: ccs811_hal.c
components/sensors/dht22_hal/: dht22_hal.c
components/sensors/gy_neo6mv2_hal/: gy_neo6mv2_hal.c
components/sensors/include/: sensor_hal.h
dashboard2/: server.py
dashboard2/static/: dashboard.js
dashboard2/templates/: BH1750.TXT  DHT22.TXT  MPU6050.TXT  MQ135.TXT  QMC5883L.TXT  dashboard.html  index.html
esp_mesh_server/: dashboard.html  dashboard.html.save  server.py
esp_mesh_server/instance/: esp_data.db
idf_py_version/: CMakeLists.txt  JTAG-info.txt  LICENSE  README.md
idf_py_version/Schematic/: ESP32-WROOM-32.kicad_sch  MCU_RaspberryPi_Simple.kicad_sym  SafeHat_WorkNet.kicad_pro  Sensors.kicad_sym  sym-lib-table
idf_py_version/main/: CMakeLists.txt
images/: team_award_pic.HEIC
main/: CMakeLists.txt  main.c
main/include/: motor_common.h  webserver_info.txt  wifi_credentials.txt
src/: MeshNode.cpp  MeshNode.h  SensorConfig.h  SensorManager.cpp  SensorManager.h  SharedTypes.h  TaskManager.cpp  TaskManager.h  bh1750.cpp  bh1750.h  ccs811.cpp  ccs811.h  dht22.cpp  dht22.h  main.cpp  mpu6050.cpp  mpu6050.h  mq135.cpp  mq135.h
(+44 files in other folders)
